--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ python-dotenv>=1.0.0
 typing-extensions>=4.8.0
 
 # 可选：LangGraph 集成（用于优化游戏流程管理）
+# 取消注释以启用LangGraph
 # langgraph>=0.0.40
 # langchain>=0.1.0
 # langchain-openai>=0.0.5
